# xr-multi-agent-communication

./: README.md
ros/: .gitignore  README.md
ros/docker/demo/: docker-compose.random-image-demo.yml  docker-compose.webcam-demo.yml
ros/docker/dev/: Dockerfile  docker-compose.dev.yml
ros/ros_packages/rosutility/: package.xml  setup.cfg  setup.py
ros/ros_packages/rosutility/rosutility/agent/: agent_type_mapper.py
ros/ros_packages/rosutility/rosutility/config/params/: params_config.json
ros/ros_packages/rosutility/rosutility/config/params/getter/: agent_param_getter.py  network_param_getter.py
ros/ros_packages/rosutility/rosutility/config/system_message/: routing_data.json
ros/ros_packages/rosutility/rosutility/config/system_message/getter/: routing_data_config_getter.py
ros/ros_packages/rosutility/rosutility/logging/: connection_logger.py  logger.py
ros/ros_packages/rosutility/rosutility/message/: system_message_metadata.py  system_message_routing_data.py  system_message_routing_info.py
ros/ros_packages/rosutility/rosutility/message/serializer/: deserializer.py  routing_data_deserializer.py  serializer.py  struct_format_serializer.py  variable_format_serializer.py
ros/ros_packages/rosutility/rosutility/socket/: socket_transceiver.py
ros/ros_packages/rosutility/rosutility/threading/: response_waiter.py
ros/ros_packages/rosutility/rosutility/util/: file_loader.py
unity/: .gitignore  README.md
unity/Assets/: ConnectMenu.cs  msgbrowser_settings.asset
unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+168 files in other folders)
